- fixed a bug regarding UPnP Services, where only one service is available (PDLNA::Devices)
- FunFeature: added configuration option Check4UpdatesNotification: a message to a connected urn:samsung.com:serviceId:MessageBoxService service will be sent if a new version of pDLNA is available (if Check4Updates is enabled)

Version 0.61.0
07-03-2013

- fixed issue #7 (https://github.com/geuma/pDLNA/issues/7) -aka- Uninitialized value in SSDP.pm
- reworked/improved the code for parsing received SSDP messages
- PDLNA::DeviceList object has been moved to database (feature/issue #11 (https://github.com/geuma/pDLNA/issues/11))
- added a Check4Updates button to the WebUI (feature/issue #12 (https://github.com/geuma/pDLNA/issues/12))
- added transcoding LogCategory for information about the Transcoding Profile selection
- changed way of configuring Transcoding Profiles
- fixed a bug regarding not-mplayer-info-data in media library database
- transcoding audio files to aac, ac3, flac, mp3, vorbis, wav and wmav2 is now available
- added support for wmav1 encoded audio files
- some minor changes to the directory listing code
- fix/workaround for issue #4 (auto detection on FreeBSD) - Net::Interface might have problems to find the matching interface sometimes
- added more information to WebUI
- fixed a bug regarding escaping brackets in directory names

Version 0.60.1
14-02-2013
- fixed issue #8 (https://github.com/geuma/pDLNA/issues/8) -aka- database preparation problem

Version 0.60.0
13-02-2013

- using a database instead of the whole huge in memory object for the ContentLibrary
- fixed issue #6 (https://github.com/geuma/pDLNA/issues/6) -aka- the default size for the logfile rotation
- updated copyright year
- added even more information to the WebUI
- external media items are shown in WebUI too
- transcoding is now avaiable to be configured per client seperately
- added the configuration option TempDir in configuration file to configure the directory for temporary files
