@@ -277,7 +277,6 @@ sub receive_messages
 {
 	my $self = shift;
 
-	my $dbh = PDLNA::Database::connect();
 	while(1)
 	{
 		my $data = undef;
@@ -322,6 +321,7 @@ sub receive_messages
 				next;
 			}
 
+			my $dbh = PDLNA::Database::connect();
 			if ($message{'NTS'} eq 'ssdp:alive' && defined($message{'NT'}))
 			{
 				PDLNA::Log::log('Adding UPnP device '.$message{'USN'}.' ('.$peer_ip_addr.') for '.$message{'NT'}.' to database.', 2, 'discovery');
@@ -349,6 +349,7 @@ sub receive_messages
 					},
 				);
 			}
+			PDLNA::Database::disconnect($dbh)
 		}
 		elsif ($message{'TYPE'} eq 'M-SEARCH')
 		{
